# AgentCLISessionManager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyinstaller-daemon.spec  pyinstaller-onedir.spec  pyinstaller.spec  pyproject.toml  tickets.md
.agentman/: post-task.md  pre-task.md
.agentman/sub_agent_actions/: _must_have_pre_conditions.saa.md  _pre_agent_action.saa.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  e2e.yml  release.yml  security.yml
backend/: __init__.py  __version__.py  app.py  cli.py  move_session.py  requirements.txt  search.py  terminal.py  updater.py
backend/frontend/: __init__.py  active-strip.jsx  app.jsx  compact-list.jsx  data.jsx  icons.jsx  index.html  palette.jsx  preview.jsx  shortcut-help.jsx  terminal-pane.jsx  terminal-splits.jsx  transcript.jsx  tweaks.jsx  utils.jsx
backend/providers/: __init__.py  base.py  claude_code.py
daemon/: __init__.py  __main__.py  bootstrap.py  launcher.py  uninstall.py
docs/: ARCHITECTURE.md  RELEASE.md  TROUBLESHOOTING.md  onboard.md
docs/design/: adr-18-daemon-split.md
docs/steps/step-000001-23-04-2026-01-48/: architecture-decisions.md  knowledge.md  lessons-learned.md  maintenance.md  step-tasks.md  user-notes.md
docs/steps/step-000002-23-04-2026-03-29/: architecture-decisions.md  knowledge.md  lessons-learned.md  maintenance.md  step-tasks.md  user-notes.md
docs/steps/step-000003-23-04-2026-22-05/: architecture-decisions.md  knowledge.md  lessons-learned.md  maintenance.md  step-tasks.md  user-notes.md
docs/steps/step-000004-24-04-2026-06-46/: architecture-decisions.md  knowledge.md  lessons-learned.md  maintenance.md  step-tasks.md  user-notes.md
docs/steps/step-000005-24-04-2026-13-39/: architecture-decisions.md  knowledge.md  lessons-learned.md  maintenance.md  step-tasks.md  user-notes.md
docs/steps/step-000006-29-04-2026-00-00/: architecture-decisions.md  knowledge.md  lessons-learned.md  maintenance.md  step-tasks.md  user-notes.md
e2e/: README.md  package-lock.json  package.json  playwright-daemon.config.ts  playwright.config.ts
e2e/helpers/: api-probe.ts  daemon-probe.ts  layout-seed.ts  page-state.ts
e2e/pages/: rightPane.ts  sessionList.ts  transcript.ts  tweaks.ts  updateBanner.ts  windowChrome.ts
e2e/tests/daemon/: README.md  autostart-singleton.spec.ts  crash.spec.ts  rehydrate.spec.ts  uninstall.spec.ts  update.spec.ts
e2e/tests/feature/: active-row-actions.spec.ts  api-contracts.spec.ts  app-boots.spec.ts  clear-all-filters.spec.ts  clipboard.spec.ts  close-pane.spec.ts  command-palette.spec.ts  daemon-mode-chip.spec.ts  filter-count-footer.spec.ts  folder-filter.spec.ts  keyboard-shortcuts.spec.ts  keystroke-splitting.spec.ts  legacy-layout-migration.spec.ts  msg-copy.spec.ts  open-in-manager-active.spec.ts  pane-id-collisions.spec.ts  reattach-skips-ping.spec.ts  rescan-button.spec.ts  rescan-feedback.spec.ts  restart-ping-text.spec.ts  restart-ping.spec.ts  resume-prompt-auto-pick.spec.ts  right-pane-tabs.spec.ts  row-action-buttons.spec.ts  row-action-external-modes.spec.ts  session-list-keyboard.spec.ts  session-list.spec.ts  session-move.spec.ts  session-pin.spec.ts  session-rename.spec.ts  shell-wrap-resume.spec.ts  shell-wrap-runtime.spec.ts  shortcut-help.spec.ts  smart-search.spec.ts  sort-and-date-filters.spec.ts  split-preserves-pty.spec.ts  sse-live-updates.spec.ts  tab-focus-highlights.spec.ts  tile-divider-drag.spec.ts  transcript-copy-id.spec.ts  (+5 more)
frontend/: app.jsx  compact-list.jsx  data.jsx  tweaks.jsx  utils.jsx
hooks/: session_start.py
installer/: agentmanager.iss
launcher/: install-shortcut.bat  kill_orphans.ps1  launch.bat  screenshot.ps1
scripts/: capture_demo_screenshots.py  vendor-frontend-deps.sh
tests/: conftest.py  test_active_pid_reuse.py  test_app_activity_labels.py  test_app_endpoints.py  test_backend_api.py  test_claude_code_provider_unit.py  test_cli.py  test_daemon_phase3.py  test_daemon_phase3b.py  test_daemon_phase3c.py  test_daemon_phase4.py  test_daemon_phase5.py  test_daemon_phase6.py  test_daemon_phase7_stubs.py  test_frontend_offline.py  test_hook.py  test_move_session.py  test_packaging.py  test_providers.py  test_search.py  test_session_pin.py  test_terminal.py  test_transcript_markdown.py  test_updater.py  test_updater_unit.py  test_user_label_flow.py  test_watcher.py  visual_check.py
tests/fixtures/claude-home/: viewer-terminal-state.json
tests/fixtures/claude-home/projects/-tmp-demo/: 11111111-1111-4111-8111-111111111111.jsonl  22222222-2222-4222-8222-222222222222.jsonl
tests/fixtures/claude-home/projects/-tmp-demo/33333333-3333-4333-8333-333333333333/subagents/: agent-abcd.jsonl
