[project]
name = "claude-sessions-viewer"
version = "0.2.0"
description = "Desktop-launchable web UI to list, preview, and resume your Claude Code sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AgentCLISessionManager contributors" }]
keywords = ["claude-code", "sessions", "desktop", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/MenachemBarak/AgentCLISessionManager"

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [
    ".venv", "frontend", "shots", "tests/fixtures",
    # Playwright scripts — local-only utilities, not part of the CI suite.
    "tests/test_user_label_flow.py", "tests/visual_check.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line too long — already 110 via line-length
    "E402",   # module-level imports after top (we use conditional imports)
    "B008",   # default-arg calls — FastAPI uses Depends/Body default
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
# Pragmatic strictness: catch real bugs without requiring every JSON blob to
# be a TypedDict. Public functions have annotations; internal helpers use
# inferred types where JSONL shape is inherently Any.
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = true
files = ["backend", "hooks"]
exclude = ["tests/fixtures", "\\.venv"]

[[tool.mypy.overrides]]
# Third-party modules without type stubs. uiautomation/comtypes are Windows-only.
module = ["uiautomation", "comtypes.*", "watchdog.*", "sse_starlette.*"]
ignore_missing_imports = true

[tool.bandit]
# Production security scanning; exclude tests & fixtures.
exclude_dirs = ["tests", ".venv", "frontend", "shots"]
skips = [
    "B104",  # hardcoded 127.0.0.1 bind — this is the intended loopback-only server
    "B603",  # subprocess call — inputs are validated (session IDs are UUIDs)
    "B607",  # partial path in subprocess — wt.exe/powershell are resolved via PATH by design
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --ignore=tests/test_user_label_flow.py --ignore=tests/visual_check.py"
# Playwright e2e tests need a running server + browser; they live in the same
# tests/ dir but are excluded from the default CI run (see addopts).
norecursedirs = ["tests/fixtures"]
python_files = ["test_*.py"]
