[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-sessions-viewer"
dynamic = ["version"]
description = "Desktop-launchable web UI to list, preview, and resume your Claude Code sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AgentCLISessionManager contributors" }]
keywords = ["claude-code", "sessions", "desktop", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.136.0",
    "starlette>=0.48.0",
    "uvicorn[standard]>=0.32.0",
    "watchdog>=5.0.3",
    "psutil>=6.1.0",
    "sse-starlette>=2.1.3",
    "pydantic>=2.9.2",
    "pywebview>=5.3",
    "uiautomation>=2.0.29; platform_system == 'Windows'",
    "comtypes>=1.4.11; platform_system == 'Windows'",
    "pywinpty>=3.0.3; platform_system == 'Windows'",
    "ptyprocess>=0.7.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
# Kept for backwards compat / explicit install; pywebview is already a core dep.
desktop = ["pywebview>=5.3"]

[project.scripts]
claude-sessions-viewer = "backend.cli:main"

[project.urls]
Repository = "https://github.com/MenachemBarak/AgentCLISessionManager"
Issues = "https://github.com/MenachemBarak/AgentCLISessionManager/issues"
Changelog = "https://github.com/MenachemBarak/AgentCLISessionManager/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "backend.__version__.__version__" }

[tool.setuptools.packages.find]
include = ["backend*", "hooks*"]
exclude = ["tests*", ".venv*", "playground*", "shots*", "docs*"]

[tool.setuptools]
# Ship the frontend SPA (under backend/frontend/) + the hook script inside
# the wheel so `pipx install` gives a self-contained working product.
include-package-data = true

[tool.setuptools.package-data]
"backend.frontend" = ["*.html", "*.jsx", "*.js", "*.css", "*.png", "*.svg", "*.ico"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [
    ".venv", "frontend", "shots", "tests/fixtures",
    # Playwright scripts — local-only utilities, not part of the CI suite.
    "tests/test_user_label_flow.py", "tests/visual_check.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line too long — already 110 via line-length
    "E402",   # module-level imports after top (we use conditional imports)
    "B008",   # default-arg calls — FastAPI uses Depends/Body default
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
# Pragmatic strictness: catch real bugs without requiring every JSON blob to
# be a TypedDict. Public functions have annotations; internal helpers use
# inferred types where JSONL shape is inherently Any.
check_untyped_defs = true
# warn_unused_ignores off: we have platform-conditional `type: ignore` lines
# for ctypes.windll that mypy flags as unused on Windows and needed on Linux.
warn_unused_ignores = false
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = true
files = ["backend", "hooks"]
exclude = ["tests/fixtures", "\\.venv"]

[[tool.mypy.overrides]]
# Third-party modules without type stubs. uiautomation/comtypes are Windows-only.
module = ["uiautomation", "comtypes.*", "watchdog.*", "sse_starlette.*"]
ignore_missing_imports = true

[tool.bandit]
# Production security scanning; exclude tests & fixtures.
exclude_dirs = ["tests", ".venv", "frontend", "shots"]
skips = [
    "B104",  # hardcoded 127.0.0.1 bind — intentional loopback-only server
    "B404",  # subprocess import — we call wt.exe/powershell with validated args, shell=False
    "B603",  # subprocess call — inputs are UUIDs or static, never user-interpolated shell strings
    "B607",  # partial path in subprocess — wt.exe/powershell resolved via PATH by design
    "B110",  # try/except/pass — defensive parsing of heterogeneous JSONL; failures are expected
    "B112",  # try/except/continue — same: malformed lines are skipped intentionally
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --ignore=tests/test_user_label_flow.py --ignore=tests/visual_check.py"
# Playwright e2e tests need a running server + browser; they live in the same
# tests/ dir but are excluded from the default CI run (see addopts).
norecursedirs = ["tests/fixtures"]
python_files = ["test_*.py"]
